k8s/policies/disallow-latest.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-latest
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "Using :latest image tags is not allowed."
        pattern:
          spec:
            containers:
            - image: "!*:latest"
