k8s/policies/disallow-root.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-run-as-non-root
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "Containers must run as non-root."
        pattern:
          spec:
            containers:
            - securityContext:
                runAsNonRoot: true
